fixed typos and added speakerdeck link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body data-gr-c-s-loaded="true">
   <div class="cv-header">
     <span>Software Engineer</span>
-    <h2>Oleksandr Syrotenko</h1>
+    <h2>Sasha Syrotenko</h1>
   </div>
   <div class="cv-content">
     <ul class="cv-perks">
@@ -30,9 +30,10 @@
         </div>
         <div class="cv-perk-value">
           <span>
-            I am software engineer and public speaker currently working at Aeneas.
-            <br>
-            Extremely interested in compilers and virtual machines.
+            My official name is Oleksandr but I prefer name Sasha.
+            <br>I am software engineer and public speaker currently working at Aeneas.
+            <br>Majorly interested in compilers and virtual machines.
+            <br>WebAssembly bulk memory operations implementor in ChakraCore engine.
           </span>
         </div>
       </li>
@@ -44,8 +45,7 @@
           <span>
             <ul>
               <li>C++, Scala, Java.</li>
-              <li>JavaScript Jedi (ES2019 and proposals).</li>
-              <li>WebAssebmly (ChakraCore Bulk operations and GC implementor).</li>
+              <li>JavaScript Jedi (ES2019), WebAssembly.</li>
               <li>Good algorithmic problems solving skills.</li>
               <li>Strong knowledge of OOP and functional programming principles.</li>
               <li>Akka Framework (Actors, Streams).</li>
@@ -71,6 +71,10 @@
                 Twitter profile:
                 <a href="https://twitter.com/FlyCreat1ve" target="_blank">Sasha</a>
               </li>
+              <li>
+                SpeakerDeck profile:
+                <a href="https://speakerdeck.com/kroeufel" target="_blank">Sasha</a>
+              </li>
             </ul>
           </span>
         </div>
@@ -88,7 +92,7 @@
       </li>
       <li class="extra-margin">
         <div class="cv-perk-name">
-          <span>expirience.</span>
+          <span>experience.</span>
         </div>
         <div class="cv-perk-value working-places">
           <span>
@@ -98,7 +102,7 @@
               Decentralized government relations blockchain as threshold pledge system.
               <br>Using Akka Actors, Akka Streams, InfluxDB for blockchain desktop application creation.
               <br>Developed mining algorithms, transaction sending and network support.
-              <br>Used Vue as for wallet frontend creation.
+              <br>Used Vue as for wallet frontend implementation.
             </p>
           </span>
           <span>
@@ -113,7 +117,8 @@
             Kyiv, Ukraine | March 2016 - October 2016
             <p>
                 Created custom trading platform and applications for exchange analysis. 
-                <br>Improved performance of exchange analysis by ~15% in general.
+                <br>Improved runtime performance of exchange analysis by ~15%, 
+                    which gave us possibilities to open extra orders and gain more profit.
             </p>
           </span>
         </div>
