added areas of int.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
             <br>I am software engineer and public speaker currently working at Aeneas.
             <br>Majorly interested in compilers and virtual machines.
             <br>WebAssembly bulk memory operations implementor in ChakraCore engine.
+            <br>Making difference.
+          </span>
+        </div>
+      </li>
+      <li>
+        <div class="cv-perk-name">
+          <span>areas of interest.</span>
+        </div>
+        <div class="cv-perk-value">
+          <span>
+            <ul>
+              <li>Compilers, interpreters, virtual machines.</li>
+              <li>Concurrency and formal memory models.</li>
+              <li>Formal verification of programs.</li>
+              <li>Complex data structures and algorithms.</li>
+            </ul>
           </span>
         </div>
       </li>
@@ -44,14 +60,14 @@
         <div class="cv-perk-value">
           <span>
             <ul>
-              <li>C++, Scala, Java.</li>
-              <li>JavaScript Jedi (ES2019), WebAssembly.</li>
+              <li>C++, Scala, Java, JavaScript Jedi.</li>
+              <li>WebAssembly : <a href="https://github.com/WebAssembly/bulk-memory-operations" target="_blank">bulk memory operations</a> implementor.</li>
               <li>Good algorithmic problems solving skills.</li>
               <li>Strong knowledge of OOP and functional programming principles.</li>
               <li>Akka Framework (Actors, Streams).</li>
               <li>Google Cloud (BigQuery, Functions, Kubernetes).</li>
               <li>Docker, rkt.</li>
-              <li>PostgreSQL, MongoDB, InfluxDB.</li>
+              <li>PostgreSQL, MongoDB.</li>
             </ul>
           </span>
         </div>
@@ -87,6 +103,7 @@
           <span>
             <b>Master's degree in Computer Science, 2013 - 2019*</b>
             Taras Shevchenko National University of Kyiv
+            <br> <i>Master's thesis thesis </i> : Bulk memory operations implementation in ChakraCore engine.
           </span>
         </div>
       </li>
@@ -99,24 +116,23 @@
             <b>Aeneas | Blockchain Software Engineer</b>
             Kyiv, Ukraine / Remote | January 2018 - present.
             <p>
-              Decentralized government relations blockchain as threshold pledge system.
-              <br>Using Akka Actors, Akka Streams, InfluxDB for blockchain desktop application creation.
-              <br>Developed mining algorithms, transaction sending and network support.
-              <br>Used Vue as for wallet frontend implementation.
+              We are doing extraordinary blockchain as threshold pledge system.
+              <br>Creating of mining algorithms, transaction sending and network support for blockchain desktop application creation.
+              <br>Using Akka Actors, Akka Streams for blockchain desktop application creation.
             </p>
           </span>
           <span>
             <b>SAP SE | Software Engineer Intern</b>
             Walldorf, Germany | June 2018 - September, 2018
             <p>
-              Integrated Google Cloud Functions for SAP DataHub (release 2.4, with experimental flag).
+              Integrated Google Cloud Functions for SAP DataHub.
             </p>
           </span>
           <span>
             <b>Financial Group Aurora | Software Developer</b>
             Kyiv, Ukraine | March 2016 - October 2016
             <p>
-                Created custom trading platform and applications for exchange analysis. 
+                Сustom trading platform and applications for exchange analysis development. 
                 <br>Improved runtime performance of exchange analysis by ~15%, 
                     which gave us possibilities to open extra orders and gain more profit.
             </p>
