added link to my PDF resume

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span>
             Kyiv, Ukraine
             <br> alex.syrotenko.official@gmail.com
-          </span>
+            <br> <a href="https://fly-style.github.io/cv/"> PDF version of the resume. </a>
         </div>
       </li>
       <li>
@@ -132,8 +132,8 @@
             <b>Financial Group Aurora | Software Developer</b>
             Kyiv, Ukraine | March 2016 - October 2016
             <p>
-                Сustom trading platform and applications for exchange analysis development. 
-                <br>Improved runtime performance of exchange analysis by ~15%, 
+                Сustom trading platform and applications for exchange analysis development.
+                <br>Improved runtime performance of exchange analysis by ~15%,
                     which gave us possibilities to open extra orders and gain more profit.
             </p>
           </span>
