--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="cv-perk-value working-places">
           <span>
             <b>Aeneas | Blockchain Software Engineer</b>
-            Kyiv, Ukraine / Remote | January 2018 - present.
+            Kyiv, Ukraine / Remote | January 2018 - July 2019.
             <p>
               We are doing extraordinary blockchain as threshold pledge system.
               <br>Creating of mining algorithms, transaction sending and network support for blockchain desktop application creation.
