Add new job description

--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
-<html class="gr__archdev_github_io"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Oleksandr Syrotenko CV</title>
-  <link rel="stylesheet" type="text/css" href="./CV_files/normalize.css" media="all">
-  <link rel="stylesheet" type="text/css" href="./CV_files/kollektif.css" media="all">
-  <link rel="stylesheet" type="text/css" href="./CV_files/style.css" media="all">
+<html class="gr__archdev_github_io">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Oleksandr Syrotenko CV</title>
+    <link rel="stylesheet" type="text/css" href="./CV_files/normalize.css" media="all">
+    <link rel="stylesheet" type="text/css" href="./CV_files/kollektif.css" media="all">
+    <link rel="stylesheet" type="text/css" href="./CV_files/style.css" media="all">
 </head>
 
 <body data-gr-c-s-loaded="true">
-  <div class="cv-header">
+<div class="cv-header">
     <span>Software Engineer</span>
-    <h2>Sasha Syrotenko</h1>
-  </div>
-  <div class="cv-content">
+    <h2>Sasha Syrotenko</h2>
+</div>
+<div class="cv-content">
     <ul class="cv-perks">
-      <li>
-        <div class="cv-perk-name">
-          <span>contact.</span>
-        </div>
-        <div class="cv-perk-value">
+        <li>
+            <div class="cv-perk-name">
+                <span>contact.</span>
+            </div>
+            <div class="cv-perk-value">
           <span>
             Kyiv, Ukraine
             <br> alex.syrotenko.official@gmail.com
             <br> <a href="https://fly-style.github.io/cv/"> PDF version of the resume. </a>
-        </div>
-      </li>
-      <li>
-        <div class="cv-perk-name">
-          <span>bio.</span>
-        </div>
-        <div class="cv-perk-value">
+            </div>
+        </li>
+        <li>
+            <div class="cv-perk-name">
+                <span>bio.</span>
+            </div>
+            <div class="cv-perk-value">
           <span>
             My official name is Oleksandr but I prefer name Sasha.
-            <br>I am software engineer and public speaker currently working at Aeneas.
+            <br>I am software engineer and public speaker currently working for DataKernel.
             <br>Majorly interested in compilers and virtual machines.
-            <br>WebAssembly bulk memory operations implementor in ChakraCore engine.
+            <br>ZetaVM GC implementor.
             <br>Making difference.
           </span>
-        </div>
-      </li>
-      <li>
-        <div class="cv-perk-name">
-          <span>areas of interest.</span>
-        </div>
-        <div class="cv-perk-value">
+            </div>
+        </li>
+        <li>
+            <div class="cv-perk-name">
+                <span>areas of interest.</span>
+            </div>
+            <div class="cv-perk-value">
           <span>
             <ul>
               <li>Compilers, interpreters, virtual machines.</li>
@@ -51,32 +53,33 @@
               <li>Complex data structures and algorithms.</li>
             </ul>
           </span>
-        </div>
-      </li>
-      <li>
-        <div class="cv-perk-name">
-          <span>skills.</span>
-        </div>
-        <div class="cv-perk-value">
+            </div>
+        </li>
+        <li>
+            <div class="cv-perk-name">
+                <span>skills.</span>
+            </div>
+            <div class="cv-perk-value">
           <span>
             <ul>
-              <li>C++, Scala, Java, JavaScript Jedi.</li>
-              <li>WebAssembly : <a href="https://github.com/WebAssembly/bulk-memory-operations" target="_blank">bulk memory operations</a> implementor.</li>
+              <li>Java, C++, Scala, JavaScript Jedi.</li>
+              <li>Open Source lover : DataKernel, WebAssembly VMs, ZetaVM comitter</li>
               <li>Good algorithmic problems solving skills.</li>
               <li>Strong knowledge of OOP and functional programming principles.</li>
-              <li>Akka Framework (Actors, Streams).</li>
+              <li>Strong system programming capabilities.</li>
+              <li>DataKernel, Akka Framework.</li>
               <li>Google Cloud (BigQuery, Functions, Kubernetes).</li>
               <li>Docker, rkt.</li>
-              <li>PostgreSQL, MongoDB.</li>
+              <li>Knowledge of different relational and NoSQL databases.</li>
             </ul>
           </span>
-        </div>
-      </li>
-      <li>
-        <div class="cv-perk-name">
-          <span>profiles.</span>
-        </div>
-        <div class="cv-perk-value working-places">
+            </div>
+        </li>
+        <li>
+            <div class="cv-perk-name">
+                <span>profiles.</span>
+            </div>
+            <div class="cv-perk-value working-places">
           <span>
             <ul>
               <li>
@@ -93,42 +96,56 @@
               </li>
             </ul>
           </span>
-        </div>
-      </li>
-      <li>
-        <div class="cv-perk-name">
-          <span>education.</span>
-        </div>
-        <div class="cv-perk-value working-places">
+            </div>
+        </li>
+        <li>
+            <div class="cv-perk-name">
+                <span>education.</span>
+            </div>
+            <div class="cv-perk-value working-places">
           <span>
             <b>Master's degree in Computer Science, 2013 - 2019*</b>
             Taras Shevchenko National University of Kyiv
             <br> <i>Master's thesis thesis </i> : Bulk memory operations implementation in ChakraCore engine.
           </span>
-        </div>
-      </li>
-      <li class="extra-margin">
-        <div class="cv-perk-name">
-          <span>experience.</span>
-        </div>
-        <div class="cv-perk-value working-places">
+            </div>
+        </li>
+        <li class="extra-margin">
+            <div class="cv-perk-name">
+                <span>experience.</span>
+            </div>
+            <div class="cv-perk-value working-places">
+          <span>
+            <b>DataKernel | Software Engineer | Performance Geek</b>
+            Kyiv, Ukraine / Remote | July 2019 - present.
+            <p>
+              We are doing efficient asynchronous Java framework for and scalable web, network and big data solutions. <br>
+              Currently : <br> 
+              - Writing runtime class tweaking tool. <br>  
+              Previously : <br> 
+              - Made DataKernel's serializers the fastest in JVM world with my team. <br> 
+              - Enabled Jigsaw modules for DataKernel. <br> 
+              - Made DataKernel's RPC and memcached RPC server one of the fastest in the world. <br> 
+              - Provided benchmarks for every major component. <br> 
+            </p>
+          </span>
           <span>
             <b>Aeneas | Blockchain Software Engineer</b>
             Kyiv, Ukraine / Remote | January 2018 - July 2019.
             <p>
-              We are doing extraordinary blockchain as threshold pledge system.
+              Extraordinary blockchain platform as threshold pledge system.
               <br>Creating of mining algorithms, transaction sending and network support for blockchain desktop application creation.
               <br>Using Akka Actors, Akka Streams for blockchain desktop application creation.
             </p>
           </span>
-          <span>
+                    <span>
             <b>SAP SE | Software Engineer Intern</b>
             Walldorf, Germany | June 2018 - September, 2018
             <p>
               Integrated Google Cloud Functions for SAP DataHub.
             </p>
           </span>
-          <span>
+                    <span>
             <b>Financial Group Aurora | Software Developer</b>
             Kyiv, Ukraine | March 2016 - October 2016
             <p>
@@ -137,28 +154,13 @@
                     which gave us possibilities to open extra orders and gain more profit.
             </p>
           </span>
-        </div>
-      </li>
-      <li class="extra-margin">
-          <div class="cv-perk-name">
-            <span>talks.</span>
-          </div>
-          <div class="cv-perk-value working-places">
-            <span>
-              <b>Garbage collection in V8 virtual machine</b>
-              KyivJS #16, Kyiv, Ukraine | November 2017.
-              <p>
-                Overview of garbage collection algorithms and concrete GC implementation in V8.
-              </p>
-            </span>
-            <span>
-              <b>Multithreading in JS. Myth or reality?</b>
-              KyivJS #18, Kyiv, Ukraine | April 2018.
-              <p>
-                  Short story about multithreading and possibilites of 'real' multithreading in JavaScript solutions.
-                  <br>Overview of synchronization primitives and memory models.
-              </p>
-            </span>
+                </div>
+        </li>
+        <li class="extra-margin">
+            <div class="cv-perk-name">
+                <span>talks.</span>
+            </div>
+            <div class="cv-perk-value working-places">
             <span>
               <b>Introduction to JavaScript Virtual Machines.</b>
               KropJS Conference, Kropivnytskiy, Ukraine | December, 2018.
@@ -166,13 +168,29 @@
                 Introduction to VM's architecture, overview of existing VMs, JS VM implementation overview.
               </p>
             </span>
-          </div>
+
+            <span>
+              <b>Multithreading in JS. Myth or reality?</b>
+              KyivJS #18, Kyiv, Ukraine | April 2018.
+              <p>
+                Short story about multithreading and possibilites of 'real' multithreading in JavaScript solutions.
+                <br>Overview of synchronization primitives and memory models.
+                </p>
+            </span>
+            <span>
+              <b>Garbage collection in V8 virtual machine</b>
+              KyivJS #16, Kyiv, Ukraine | November 2017.
+              <p>
+                Overview of garbage collection algorithms and concrete GC implementation in V8.
+                </p>
+            </span>
+            </div>
         </li>
     </ul>
 
-  </div>
+</div>
 
 
-
-
-</body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
+</body>
+<span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span
+        class="gr__triangle"></span></span></html>
