--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Kyiv, Ukraine
             <br> alex.syrotenko.official@gmail.com
             <br> <a href="https://fly-style.github.io/cv/"> PDF version of the resume. </a>
-            </div>
+        </span>
         </li>
         <li>
             <div class="cv-perk-name">
@@ -33,9 +33,9 @@
             <div class="cv-perk-value">
           <span>
             My official name is Oleksandr but I prefer name Sasha.
-            <br>I am software engineer and public speaker currently working for DataKernel.
+            <br>I am software engineer and public speaker currently working for Cybervision.
             <br>Majorly interested in compilers and virtual machines.
-            <br>ZetaVM GC implementor.
+            <br>ChakraCore core community team member.
             <br>Making difference.
           </span>
             </div>
@@ -62,14 +62,14 @@
             <div class="cv-perk-value">
           <span>
             <ul>
-              <li>Java, C++, Scala, JavaScript Jedi.</li>
-              <li>Open Source lover : DataKernel, WebAssembly VMs, ZetaVM comitter</li>
+              <li>Java, C++, Scala, JavaScript Jedi. WebAssembly lover.</li>
+              <li>Open Source lover : DataKernel, WebAssembly VMs, ChakraCore comitter</li>
               <li>Good algorithmic problems solving skills.</li>
               <li>Strong knowledge of OOP and functional programming principles.</li>
               <li>Strong system programming capabilities.</li>
-              <li>DataKernel, Akka Framework.</li>
-              <li>Google Cloud (BigQuery, Functions, Kubernetes).</li>
-              <li>Docker, rkt.</li>
+              <li>C++20, Qt5, cmake, conan.io, Boost Asio, absl.</li>
+              <li>Google Cloud (BigQuery, Functions, k8s).</li>
+              <li>Docker, rkt, k8s</li>
               <li>Knowledge of different relational and NoSQL databases.</li>
             </ul>
           </span>
@@ -116,17 +116,23 @@
             </div>
             <div class="cv-perk-value working-places">
           <span>
-            <b>DataKernel | Software Engineer | Performance Geek</b>
-            Kyiv, Ukraine / Remote | July 2019 - present.
+            <b>Cybervision | Software Engineer </b>
+            Kyiv, Ukraine / Remote | Dec 2019 - present.
+            <p>
+              We are doing high-performant IoT tools using C++, Qt5, cmake and conan.io. Under NDA. <br>
+            </p>
+          </span>
+          <span>
+            <b>DataKernel (now ActiveJ) | Software Engineer (Contractor) | Performance Geek</b>
+            Kyiv, Ukraine / Remote | July 2019 - Dec 2019.
             <p>
               We are doing efficient asynchronous Java framework for and scalable web, network and big data solutions. <br>
-              Currently : <br> 
-              - Writing runtime class tweaking tool. <br>  
-              Previously : <br> 
-              - Made DataKernel's serializers the fastest in JVM world with my team. <br> 
-              - Enabled Jigsaw modules for DataKernel. <br> 
-              - Made DataKernel's RPC and memcached RPC server one of the fastest in the world. <br> 
-              - Provided benchmarks for every major component. <br> 
+              - Runtime class tweaking tool called <a href="https://specializer.activej.io/"> serializer</a>. <br>
+              - Made DataKernel's serializers <a href="http://datakernel.io/docs/blog/datakernel-v31-release.html"> the fastest in JVM world with my team</a>. <br>
+              - Enabled Jigsaw modules for DataKernel. <br>
+              - Made DataKernel's RPC and memcached RPC server one of the fastest in the world. <br>
+              - Provided benchmarks for every major component. <br>
+              - Participate in custom <a href="http://datakernel.io/docs/cloud/cube.html"> OLAP Cube</a> engine . <br>
             </p>
           </span>
           <span>
@@ -146,7 +152,7 @@
             </p>
           </span>
                     <span>
-            <b>Financial Group Aurora | Software Developer</b>
+            <b>Financial Group Aurora | Software Engineer Intern</b>
             Kyiv, Ukraine | March 2016 - October 2016
             <p>
                 Сustom trading platform and applications for exchange analysis development.
