--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <span>contact.</span>
             </div>
             <div class="cv-perk-value">
-          <span>
-            Kyiv, Ukraine
-            <br> alex.syrotenko.official@gmail.com
-            <br> <a href="https://fly-style.github.io/cv/"> PDF version of the resume. </a>
-        </span>
+                <span>
+                Kyiv, Ukraine
+                <br> alex.syrotenko.official@gmail.com
+                <br> <a href="https://fly-style.github.io/cv/"> PDF version of the resume. </a>
+                </span>
+            </div>
         </li>
         <li>
             <div class="cv-perk-name">
@@ -33,9 +34,8 @@
             <div class="cv-perk-value">
           <span>
             My official name is Oleksandr but I prefer name Sasha.
-            <br>I am software engineer and public speaker currently working for Cybervision.
-            <br>Majorly interested in compilers and virtual machines.
-            <br>ChakraCore core community team member.
+            <br>I am software engineer and public speaker currently working for Hazelcast.
+            <br>Majorly interested in compilers and virtual machines and SQL engines.
             <br>Making difference.
           </span>
             </div>
@@ -47,9 +47,11 @@
             <div class="cv-perk-value">
           <span>
             <ul>
-              <li>Compilers, interpreters, virtual machines.</li>
+              <li>Compilers and runtimes.</li>
+              <li>SQL engines, distributed databases.</li>
               <li>Concurrency and formal memory models.</li>
               <li>Formal verification of programs.</li>
+              <li>Browser engines.</li>
               <li>Complex data structures and algorithms.</li>
             </ul>
           </span>
@@ -62,15 +64,14 @@
             <div class="cv-perk-value">
           <span>
             <ul>
-              <li>Java, C++, Scala, JavaScript Jedi. WebAssembly lover.</li>
-              <li>Open Source lover : DataKernel, WebAssembly VMs, ChakraCore comitter</li>
+              <li>Java, C++, Scala, SQL, JavaScript Jedi. WebAssembly lover.</li>
+              <li>Open Source lover : Hazelcast, DataKernel, WebAssembly VMs</li>
               <li>Good algorithmic problems solving skills.</li>
               <li>Strong knowledge of OOP and functional programming principles.</li>
               <li>Strong system programming capabilities.</li>
-              <li>C++20, Qt5, cmake, conan.io, Boost Asio, absl.</li>
-              <li>Google Cloud (BigQuery, Functions, k8s).</li>
+              <li>C++17, Qt5, cmake, conan.io, Boost Asio, absl.</li>
               <li>Docker, rkt, k8s</li>
-              <li>Knowledge of different relational and NoSQL databases.</li>
+              <li>Knowledge & experience of database internals.</li>
             </ul>
           </span>
             </div>
@@ -116,11 +117,26 @@
             </div>
             <div class="cv-perk-value working-places">
           <span>
-            <b>Cybervision | Software Engineer </b>
+            <b>Hazelcast | Senior Software Engineer </b>
             Kyiv, Ukraine / Remote | Dec 2019 - present.
             <p>
-              We are doing high-performant IoT tools using C++, Qt5, cmake and conan.io. Under NDA. <br>
+                – We are making distributed SQL engine for fast, fail-safe and handy data querying. <br>
+                – Implemented SQL engine fuzzy tester. <br>
+                – Developed wide list of SQL operators and functions according to SQL-2003 standard. <br>
+                – Developed DML layer in streaming part of SQL engine. <br>
             </p>
+          </span>
+          <span>
+            <b>Cybervision | Software Engineer (Contractor) </b>
+            Kyiv, Ukraine / Remote | Jan 2020 - Dec 2020.
+            <p>
+                – Developed IoT agent with Linux, Windows and QNX OS support. <br>
+                – Provide core agent’s functionality : fast data loading and uploading, self-update process.<br>
+                – Support OPC UA and various SQL databases as data sources support. <br>
+                – Support custom 3rd parties forks stability and updates (Qt, OpenSSL, abseil) <br>
+                – Developed agent application self-updating for each supported platform. <br>
+                – Support integration and e2e tests using Kotlin, TestNG and test-containters. <br>
+             </p>
           </span>
           <span>
             <b>DataKernel (now ActiveJ) | Software Engineer (Contractor) | Performance Geek</b>
