--- a/index.html
+++ b/index.html
@@ -118,11 +118,15 @@
             <div class="cv-perk-value working-places">
           <span>
             <b>Hazelcast | Senior Software Engineer </b>
-            Kyiv, Ukraine / Remote | Dec 2019 - present.
+            Kyiv, Ukraine / Remote | Jan 2021 - present.
             <p>
                 – We are making distributed SQL engine for fast, fail-safe and handy data querying. <br>
-                – Implemented SQL engine fuzzy tester. <br>
+                – Designed and implemented distributed IMap index scan. <br>
+                – Designed and implemented CREATE, DROP VIEW and all view table infrastructure. <br>
+                – Designed and implemented CREATE and DROP INDEX statement for SQL engine. <br>
+                – Co-designed and implemented streaming window aggregation functions. <br>
                 – Developed wide list of SQL operators and functions according to SQL-2003 standard. <br>
+                – Implemented SQL engine fuzzy tester. <br>
                 – Developed DML layer in streaming part of SQL engine. <br>
             </p>
           </span>
