--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             </div>
             <div class="cv-perk-value">
           <span>
-            My official name is Oleksandr but I prefer name Sasha.
+            My official name is Oleksandr, but I prefer name Sasha.
             <br>I am software engineer and public speaker currently working for Hazelcast.
-            <br>Majorly interested in compilers and virtual machines and SQL engines.
-            <br>Making difference.
+            <br>My majorly interest (and the strongest passion) are compilers and virtual machines.
+            <br>Usually, I am making difference.
           </span>
             </div>
         </li>
@@ -47,10 +47,9 @@
             <div class="cv-perk-value">
           <span>
             <ul>
-              <li>Compilers and runtimes.</li>
-              <li>SQL engines, distributed databases.</li>
+              <li>Compilers and runtimes design and development.</li>
               <li>Concurrency and formal memory models.</li>
-              <li>Formal verification of programs.</li>
+              <li>SQL engines, distributed databases.</li>
               <li>Browser engines.</li>
               <li>Complex data structures and algorithms.</li>
             </ul>
@@ -66,12 +65,10 @@
             <ul>
               <li>Java, C++, Scala, SQL, JavaScript Jedi. WebAssembly lover.</li>
               <li>Open Source lover : Hazelcast, DataKernel, WebAssembly VMs</li>
-              <li>Good algorithmic problems solving skills.</li>
-              <li>Strong knowledge of OOP and functional programming principles.</li>
-              <li>Strong system programming capabilities.</li>
-              <li>C++17, Qt5, cmake, conan.io, Boost Asio, absl.</li>
-              <li>Docker, rkt, k8s</li>
+              <li>Mentorship and small team management.</li>
+              <li>Strong system and infrastructure programming capabilities and experience.</li>
               <li>Knowledge & experience of database internals.</li>
+              <li>Good algorithmic problems solving skills.</li>
             </ul>
           </span>
             </div>
@@ -120,14 +117,14 @@
             <b>Hazelcast | Senior Software Engineer </b>
             Kyiv, Ukraine / Remote | Jan 2021 - present.
             <p>
-                – We are making distributed SQL engine for fast, fail-safe and handy data querying. <br>
-                – Designed and implemented distributed IMap index scan. <br>
-                – Designed and implemented CREATE, DROP VIEW and all view table infrastructure. <br>
-                – Designed and implemented CREATE and DROP INDEX statement for SQL engine. <br>
+                – Distributed SQL engine and streaming engine writer in distributed diverse team.. <br>
+                – Co-designed and developed stream to stream JOIN for SQL and streaming engine. <br>
+                – Designed and developed distributed streaming index scan for Hazelcast SQL engine. <br>
                 – Co-designed and implemented streaming window aggregation functions. <br>
+                – Designed and implemented different CREATE and DROP statements for SQL engine. <br>
+                – Designed and implemented DML layer for streaming part of SQL engine. <br>
                 – Developed wide list of SQL operators and functions according to SQL-2003 standard. <br>
-                – Implemented SQL engine fuzzy tester. <br>
-                – Developed DML layer in streaming part of SQL engine. <br>
+                – Integration and support of SQL engine fuzzy testing (SQLancer). <br>
             </p>
           </span>
           <span>
